FlightPath 4.x Changelog
========================

2012-07-06
  Enabled announcements and update_status modules on FlightPath first install,
  and created a new sample announcement when the announcement module is installed
  the first time.

  Added check to install.php to make sure custom directory was writable, displaying
  error if it is not.
  
 
2012-07-05
  Started update_status module.
  

2012-06-30
  Finalized COPYRIGHT.txt file, and removed old copyright notices from individual source files.
  
  Added token check to advising submissions, as well as hook so users can hook in when it is submitted.
  
  Removed old files from the repository.
  
  index.php checks to see that FlightPath is installed, if not, it redirects to install script


2012-06-27
  Completed the install script for the most part, as well as made various changes in other
  files in the pursuit of making the install script work.


2012-06-26
  Working on creating an install script for FlightPath; moving database creation statements
  into system.install file, under the system module.


2012-06-10
  Finished the stats module for now.  It could use some more reports, but is OK for now.
  
  Got mobile version back to working state.


2012-06-09
  Beginning work on the stats module.
  
  Changed comment form to be proper FlightPath form, with form api.
  

2012-06-08
  Student developmentals and standardized tests are now in core.
  
  I have officially done away with the concept of the "flightpath_extra_data"
  additional database.
  
  Added in a depricated_message function, to help me track down problems after
  I depricate a function.

  Moved to new watchdog() table and function, instead of the old log table.

  Got rid of old PHP split() function.
  

2012-06-07
  Removed the old AdvisingScreen::draw_curved_title function, in favor of the new
  fp_render_curved_line function.
  
  Got transfer credits & eqv's working correctly.
  

2012-06-05